# cpp3DGameEngine

./: CMakeLists.txt  README.md
assets/resources/: bingform.mtl  chickenV2.mtl  fox.mtl  guy.mtl  lightSource.mtl  untitled.mtl
assets/resources/blender/: lightSource.blend
assets/shaders/fragment/: lineshader.frag  shader.frag
assets/shaders/vertex/: lineshader.vert
include/core/: Camera.hpp  Engine.hpp  Events.hpp  LightManager.hpp  MeshHandler.hpp  PointLight.hpp  TextureLoader.hpp
include/graphics/: Shader.hpp
include/input/: Keyboard.hpp  Mouse.hpp
src/: main.cpp
src/core/: Camera.cpp  Engine.cpp  Events.cpp  LightManager.cpp  MeshHandler.cpp  PointLight.cpp  TextureLoader.cpp
src/graphics/: Shader.cpp
src/input/: Keyboard.cpp  Mouse.cpp
